# koru

./: .gitignore  Cargo.toml  README.md  features.md  init.scm  shell.nix
configs/: common.scm  emacs.scm  kakoune.scm  nano.scm  vi.scm
docs/: _sidebar.md  index.html
docs/runtime-modules/: README.md  _sidebar.md  key-map.md  koru-buffer.md  koru-command.md  koru-cursor.md  koru-key.md  koru-modal.md  koru-session.md  koru-task.md  koru-theme.md  major-mode.md  minor-mode.md  styled-text.md
guile-rs/: Cargo.toml
guile-rs-sys/: Cargo.toml  build.rs  wrapper.c  wrapper.h
guile-rs-sys/src/: lib.rs
guile-rs/scheme_test_files/: async.scm  async01.scm
guile-rs/src/: async-support.scm  asynchronous.rs  fluid.rs  guile.rs  lib.rs  module.rs  scheme_object.rs  smob.rs
guile-rs/src/scheme_object/: character.rs  hashtable.rs  keyword.rs  list.rs  number.rs  pair.rs  procedure.rs  smob.rs  string.rs  symbol.rs  vector.rs
keypress-localize/: Cargo.toml
keypress-localize/src/: english_uk.rs  english_us.rs  lib.rs
koru/: Cargo.toml
koru-core/: Cargo.toml
koru-core/src/: args.rs  attr_set.rs  kernel.rs  keybinding.rs  keymap.rs  lib.rs  logging.rs  modules.rs  styled_text.rs
koru-core/src/kernel/: broker.rs  buffer.rs  client.rs  cursor.rs  files.rs  input.rs  input_group.rs  key.rs  lua_api.rs  modes.rs  rpc.rs  scheme_api.rs  session.rs  state.rs  utils.rs
koru-core/src/kernel/buffer/: cursor.rs  text_buffer.rs  text_buffer_table.rs  undo.rs
koru-core/src/kernel/files/: file_table.rs  open_file.rs
koru-core/src/kernel/input/: input_group.rs  key.rs  key_buffer.rs
koru-core/src/kernel/lua_api/: major_mode.rs  minor_mode.rs  ui_state.rs
koru-core/src/kernel/modes/: major.rs  minor.rs
koru-core/src/kernel/rpc/: message.rs
koru-core/src/kernel/scheme_api/: command.rs  major_mode.rs  minor_mode.rs  modal.rs  session.rs  task.rs  theme.rs
koru-core/src/kernel/scheme_api/major_mode/: text_edit.rs
koru-core/src/kernel/scheme_api/session/: broker_client.rs  buffer.rs  hooks.rs  keymap.rs
koru-core/src/kernel/session/: buffer.rs
koru-core/src/logging/: ring_buffer.rs
koru-core/src/modules/: data.rs
koru-core/src/modules/data/: utf8_buffer.rs
koru-modules/: Cargo.toml
koru-modules/src/: data.rs
koru/src/: common.rs  crash_logs.rs  iced_backend.rs  main.rs  tuirealm_backend.rs  tuirelm_backend.rs  ui_state.rs
koru/src/iced_backend/: buffer_state.rs  colors.rs  styled_text.rs
koru/src/iced_backend/widgets/: editor_view.rs
koru/src/tuirealm_backend/: buffer_state.rs  colors.rs  components.rs  events.rs  input.rs
koru/src/tuirealm_backend/components/: message_bar.rs  textview.rs
koru/src/tuirelm_backend/: events.rs  input.rs
koru/src/ui_state/: buffer_state.rs
lua/: logviewmode.lua  textviewmode.lua
piece-tree/: Cargo.toml
piece-tree/src/: lib.rs
scheme/: koru.scm  text-edit-mode.scm  text-view-mode.scm
scrollable-rich/: Cargo.toml
scrollable-rich/src/: lib.rs  rich.rs  scrollable_rich.rs
text-tests/: emoji.txt  glitch-text.txt  long-line.txt
