
[workspace]
resolver = "3"
members = ["koru","koru-core"]

[workspace.dependencies]
#guile-rs-sys = { path = "./guile-rs-sys" }
#guile-rs = { path = "./guile-rs" }
koru-core = { path = "./koru-core" }
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["full"] }
scheme-rs = { git = "https://github.com/maplant/scheme-rs", rev = "19aac3f", features = ["async", "tokio"]}
inventory = "0.3"
