
[workspace]
resolver = "3"
members = ["keypress-localize","koru","koru-core", "scrollable-rich"]

[workspace.dependencies]
#guile-rs-sys = { path = "./guile-rs-sys" }
#guile-rs = { path = "./guile-rs" }
scrollable-rich = { path = "./scrollable-rich" }
koru-core = { path = "./koru-core" }
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["full"] }
scheme-rs = { git = "https://github.com/maplant/scheme-rs", rev = "429cdbf", features = ["async", "tokio"]}
hashbrown = "0.16.1" # included for scheme-rs
inventory = "0.3.21" # include for scheme-rs
keypress-localize = { path = "./keypress-localize" }
log = { version = "0.4", features = ["std", "serde"] }