[package]
name = "koru-core"
version = "0.1.0"
edition = "2024"

[dependencies]
mlua = { workspace = true, features = ["send", "async", "serde", "serialize"]}
tokio = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
futures = { workspace = true }
bitflags = "2.9.4"
crop = "0.4.3"
#guile-rs = { workspace = true }
scheme-rs = { workspace = true }
inventory = { workspace = true }

[features]
default = ["luajit"]
lua51 = ["mlua/lua51"]
luajit = ["mlua/luajit"]