[package]
name = "koru-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
bitflags = "2.9.4"
crop = "0.4.3"
#guile-rs = { workspace = true }
scheme-rs = { workspace = true }
inventory = { workspace = true }
hashbrown = { workspace = true }
keypress-localize = { workspace = true }
