[package]
name = "koru"
version = "0.1.0"
edition = "2024"

[dependencies]
koru-core = { workspace = true }
iced = { version = "0.13.1", features = ["tokio", "advanced"]}
iced_core = "0.13.2"
iced_futures = "0.13.1"
scrollable-rich = { workspace = true }
futures = { workspace = true }
tuirealm = "3.1.0"
crossterm = "0.29.0"
tabled = "0.20.0"
log = { workspace = true }
