[package]
name = "scrollable-rich"
version = "0.1.0"
edition = "2024"

[dependencies]
#iced = { version = "0.13.1", features = ["tokio", "advanced"]}
iced_core = {  version = "0.13.2", features = ["advanced"] }
iced_renderer = "0.13.0"
unicode-segmentation = "1.12.0"

[features]
default = [ "advanced" ]
advanced = [ "iced_core/advanced" ]